# rendered

./: Boundable.h  Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  Closed.h  ClosedThing.cpp  ClosedThing.h  Intersectable.h  KDTree.cpp  KDTree.h  Material.cpp  Material.h  Object.cpp  Object.h  Readme.md  Readme.txt  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Thing.h  diagram.class.violet.html  main.cpp
Concurrency/: ThreadPool.h  ThreadSafeQueue.h
LightSources/: AmbientLight.cpp  AmbientLight.h  PointLight.cpp  PointLight.h
Linalg/: Matrix.cpp  Matrix.h  Point.cpp  Point.h  Ray.cpp  Ray.h  Vector.cpp  Vector.h
ObjectArithmetic/: Complement.cpp  Complement.h  Difference.cpp  Difference.h  Intersection.cpp  Intersection.h  Union.cpp  Union.h
Primitives/: Parallelepiped.cpp  Parallelepiped.h  Primitive.h  Quadrangle.cpp  Quadrangle.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
RGB/: RGBColor.cpp  RGBColor.h  RGBImage.cpp  RGBImage.h
